# stroop-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  flake.nix  main.rs  package.nix
src/: containers.rs  lib.rs  map_file.rs  memory.rs  tests.rs
src/containers/: emulator.rs  map_file.rs  mod.rs  sm64_types.rs  types.rs
src/containers/map_file/: guess_offsets.rs  mod.rs  tests.rs
src/containers/map_file/guess_offsets/: pattern.rs
src/containers/sm64_types/: general.rs  mod.rs  specific.rs  types.rs
src/map_file/: guess_offsets.rs  tests.rs
src/map_file/guess_offsets/: types.rs
src/map_files/: sm64.us.map
src/tabs/: mario_tab.rs  misc_tab.rs
src/tests/: map_file_parse.rs  map_files.rs  mod.rs  patterns.rs
stroop-emu-mem/: Cargo.toml
stroop-emu-mem/src/: emulators.rs  errors.rs  lib.rs
stroop-gui/: Cargo.toml
stroop-gui/src/: lib.rs  main.rs  tab.rs  tabs.rs
stroop-gui/src/tabs/: mario_tab.rs  misc_tab.rs  mod.rs
stroop-macros/: Cargo.toml
stroop-macros/src/: lib.rs
stroop-macros/tests/: tests.rs
stroop-macros/tests/compile_fails/: empty_pattern.rs  invalid_comma.stderr  invalid_pattern.rs  invalid_pattern_hex.rs  invalid_pattern_hex2.rs  invalid_pattern_hex3.rs  invalid_pattern_hex4.rs  invalid_pattern_mask.rs  invalid_pattern_mask2.rs  invalid_unary.rs  invalid_unary.stderr  missing_comma.rs  missing_comma.stderr  missing_comma2.rs  missing_offset.rs  missing_offset.stderr  missing_pattern.rs  missing_pattern.stderr  pattern_not_str.rs  pattern_not_str2.rs  wildcard_end.rs  wildcard_start.rs
