[package]
name = "stroop-rs"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

strum = { version = "0.25.0", features = ["derive"] }
once_cell = "1.19.0"

iced = { version = "0.10.0", features = []}
iced_aw = { version = "0.7.0", features = ["tabs"]}

stroop-macros = { path = "stroop-macros" }

[workspace]
members = [
    ".",
    "stroop-macros",
]

[lints.rust]
unsafe_code = "deny"
