[package]
name = "stroop-rs"
version = "0.1.0"
edition = "2024"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stroop-macros = { path = "stroop-macros" }
stroop-emu-mem = { path = "stroop-emu-mem" }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
bitflags = "2.6.0"

[workspace]
members = [
    ".",
    "stroop-macros",
    "stroop-gui",
    "stroop-emu-mem",
]

[lints.rust]
unsafe_code = "deny"
