[package]
name = "stroop-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = ["grid", "tabs"]}
iced = { git = "https://github.com/iced-rs/iced", features = [] }
stroop-rs = { path = ".." }

