[package]
name = "stroop-gui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia", "tokio"]}
iced_aw = { version = "0.11.0", default-features = false, features = ["grid", "tabs"]}
stroop-rs = { path = ".." }
stroop-emu-mem = { path = "../stroop-emu-mem" }

